--- a/bookingform2.css
+++ b/bookingform2.css
@@ -49,101 +49,128 @@ font-style: normal;
 font-weight: 400;
 line-height: 140%;
 position: relative;
-right: 51px;
+left: 16px;
 }
-.name{
+.USA{
     color: #FFF;
 font-family: 'Lato', sans-serif;
-font-size: 20px;
+font-size: 24px;
 font-style: normal;
 font-weight: 400;
 line-height: 160%;
 position: relative;
-right: 117px;
+right: 88px;
 }
-.email{
+.usa{
+    width: 23px;
+height: 23px;
+border-radius: 6px;
+border: 2px solid #FFF;
+accent-color:#4EAF4E;
+position: relative;
+right: 136px;
+bottom: 39px;
+accent-color:#4EAF4E;
+}
+.UK{
     color: #FFF;
 font-family: 'Lato', sans-serif;
-font-size: 20px;
+font-size: 24px;
 font-style: normal;
 font-weight: 400;
 line-height: 160%;
 position: relative;
-right: 116px;
+right: 97px;
 }
-.phone{
+.uk{
+    width: 23px;
+height: 23px;
+border-radius: 6px;
+border: 2px solid #FFF;
+position: relative;
+right: 136px;
+bottom: 39px;
+accent-color:#4EAF4E;
+}
+.CANADA{
     color: #FFF;
 font-family: 'Lato', sans-serif;
-font-size: 20px;
+font-size: 24px;
 font-style: normal;
 font-weight: 400;
 line-height: 160%;
 position: relative;
-right: 80px;
+right: 63px;
 }
-.city{
+.canada{
+    width: 23px;
+height: 23px;
+border-radius: 6px;
+border: 2px solid #FFF;
+position: relative;
+right: 136px;
+bottom: 39px;
+accent-color:#4EAF4E;
+}
+.AUSTRALIA{
     color: #FFF;
 font-family: 'Lato', sans-serif;
-font-size: 20px;
+font-size: 24px;
+font-style: normal;
+font-weight:400;
+line-height: 160%;
+position: relative;
+right: 47px;
+}
+.australia{
+    width: 23px;
+height: 23px;
+border-radius: 6px;
+border: 2px solid #FFF;
+position: relative;
+right: 136px;
+bottom: 39px;
+accent-color:#4EAF4E;
+}
+.Others{
+    color: #FFF;
+font-family: 'Lato', sans-serif;
+font-size: 24px;
 font-style: normal;
 font-weight: 400;
 line-height: 160%;
 position: relative;
-right: 67px;
+right: 76px;
 }
-#fname{
-    display: flex;
-width: 300px;
-height: 50px;
-padding: 15px 23px;
-align-items: flex-start;
-gap: 10px;
-flex-shrink: 0;
-border-radius: 42px;
+.others{
+    width: 23px;
+height: 23px;
+border-radius: 6px;
 border: 2px solid #FFF;
-background-color: unset;
-margin-bottom: 20px;
-}
-#email{
-    display: flex;
-    width: 406px;
-height: 50px;
-padding: 15px 23px;
-align-items: flex-start;
-gap: 10px;
-flex-shrink: 0;
-border-radius: 42px;
-border: 2px solid #FFF;
-background-color: unset;
-margin-bottom: 20px;
 position: relative;
-left: 52px;
+right: 136px;
+bottom: 39px;
+accent-color:#4EAF4E;
 }
-#phone{
-    display: flex;
-width: 300px;
-height: 50px;
-padding: 15px 23px;
-align-items: flex-start;
-gap: 10px;
-flex-shrink: 0;
-border-radius: 42px;
-border: 2px solid #FFF;
-background-color: unset;
-margin-bottom: 20px;
+.No-preference{
+    color: #FFF;
+font-family: 'Lato', sans-serif;
+font-size: 24px;
+font-style: normal;
+font-weight: 400;
+line-height: 160%;
+position: relative;
+right: 37px;
 }
-#city{
-    display: flex;
-width: 300px;
-height: 50px;
-padding: 15px 23px;
-align-items: flex-start;
-gap: 10px;
-flex-shrink: 0;
-border-radius: 42px;
+.no-preference{
+    width: 23px;
+height: 23px;
+border-radius: 6px;
 border: 2px solid #FFF;
-background-color: unset;
-margin-bottom: 35px;
+position: relative;
+right: 136px;
+bottom: 39px;
+accent-color:#4EAF4E;
 }
 .next{
     display: flex;
@@ -164,4 +191,5 @@ right: 80px;
 .next:hover{
     background-color: #4EAF4E;
     color: white;
+
 }
