--- a/bookingform3.css
+++ b/bookingform3.css
@@ -42,110 +42,157 @@ position: relative;
 }
 .form-content p{
     color: #FFF;
-text-align: center;
 font-family: 'Lato', sans-serif;
 font-size: 20px;
 font-style: normal;
 font-weight: 400;
 line-height: 140%;
 position: relative;
-right: 51px;
+left: 33px;
+    width: 361px;
+    height: 69px;
 }
-.name{
+.IELTS{
     color: #FFF;
 font-family: 'Lato', sans-serif;
-font-size: 20px;
+font-size: 24px;
 font-style: normal;
 font-weight: 400;
 line-height: 160%;
 position: relative;
-right: 117px;
+right: 90px;
 }
-.email{
+.ielts{
+    width: 23px;
+    height: 38px;
+border-radius: 6px;
+border: 2px solid #FFF;
+accent-color:#4EAF4E;
+position: relative;
+right: 136px;
+bottom: 39px;
+}
+.TOEFL{
     color: #FFF;
 font-family: 'Lato', sans-serif;
-font-size: 20px;
+font-size: 24px;
 font-style: normal;
 font-weight: 400;
 line-height: 160%;
 position: relative;
-right: 116px;
+right: 81px;
 }
-.phone{
+.toefl{
+    width: 23px;
+    height: 38px;
+border-radius: 6px;
+border: 2px solid #FFF;
+position: relative;
+right: 136px;
+bottom: 39px;
+accent-color:#4EAF4E;
+}
+.PTE{
     color: #FFF;
 font-family: 'Lato', sans-serif;
-font-size: 20px;
+font-size: 24px;
 font-style: normal;
 font-weight: 400;
 line-height: 160%;
 position: relative;
-right: 80px;
+right: 96px;
 }
-.city{
+.pte{
+    width: 23px;
+    height: 38px;
+border-radius: 6px;
+border: 2px solid #FFF;
+position: relative;
+right: 136px;
+bottom: 39px;
+accent-color:#4EAF4E;
+}
+.GRE{
     color: #FFF;
 font-family: 'Lato', sans-serif;
-font-size: 20px;
+font-size: 24px;
+font-style: normal;
+font-weight:400;
+line-height: 160%;
+position: relative;
+right: 94px;
+}
+.gre{
+    width: 23px;
+    height: 38px;
+border-radius: 6px;
+border: 2px solid #FFF;
+position: relative;
+right: 136px;
+bottom: 39px;
+accent-color:#4EAF4E;
+}
+.GMAT{
+    color: #FFF;
+font-family: 'Lato', sans-serif;
+font-size: 24px;
 font-style: normal;
 font-weight: 400;
 line-height: 160%;
 position: relative;
-right: 67px;
+right: 83px;
 }
-#fname{
-    display: flex;
-width: 300px;
-height: 50px;
-padding: 15px 23px;
-align-items: flex-start;
-gap: 10px;
-flex-shrink: 0;
-border-radius: 42px;
+.gmat{
+    width: 23px;
+    height: 38px;
+border-radius: 6px;
 border: 2px solid #FFF;
-background-color: unset;
-margin-bottom: 20px;
-}
-#email{
-    display: flex;
-    width: 406px;
-height: 50px;
-padding: 15px 23px;
-align-items: flex-start;
-gap: 10px;
-flex-shrink: 0;
-border-radius: 42px;
-border: 2px solid #FFF;
-background-color: unset;
-margin-bottom: 20px;
 position: relative;
-left: 52px;
+right: 136px;
+bottom: 39px;
+accent-color:#4EAF4E;
 }
-#phone{
-    display: flex;
-width: 300px;
-height: 50px;
-padding: 15px 23px;
-align-items: flex-start;
-gap: 10px;
-flex-shrink: 0;
-border-radius: 42px;
+.SAT{
+    color: #FFF;
+font-family: 'Lato', sans-serif;
+font-size: 24px;
+font-style: normal;
+font-weight: 400;
+line-height: 160%;
+position: relative;
+right: 95px;
+}
+.sat{
+    width: 23px;
+    height: 38px;
+border-radius: 6px;
 border: 2px solid #FFF;
-background-color: unset;
-margin-bottom: 20px;
+position: relative;
+right: 136px;
+bottom: 39px;
+accent-color:#4EAF4E;
 }
-#city{
-    display: flex;
-width: 300px;
-height: 50px;
-padding: 15px 23px;
-align-items: flex-start;
-gap: 10px;
-flex-shrink: 0;
-border-radius: 42px;
+.No-preference{
+    color: #FFF;
+font-family: 'Lato', sans-serif;
+font-size: 24px;
+font-style: normal;
+font-weight: 400;
+line-height: 160%;
+position: relative;
+right: 40px;
+}
+.no-preference{
+    width: 23px;
+    height: 38px;
+border-radius: 6px;
 border: 2px solid #FFF;
-background-color: unset;
-margin-bottom: 35px;
+position: relative;
+right: 136px;
+bottom: 39px;
+accent-color:#4EAF4E;
 }
-.next{
+.book{
     display: flex;
 padding: 11px 43px 12px 43px;
 justify-content: center;
@@ -161,7 +208,12 @@ line-height: 160%;
 position: relative;
 right: 80px;
 }
-.next:hover{
+.book:hover{
     background-color: #4EAF4E;
     color: white;
+
+}
+input[type="checkbox"]{
+    width:23px;
+    height: 23px;
 }
