--- a/IELTS.css
+++ b/IELTS.css
@@ -1566,3 +1566,93 @@ bottom: 8.875rem;
     font-weight: 500;
 }
 }
+@media (max-width:638px){
+    .coverimg{
+        
+        width: 47rem;
+    height: 20.313rem;
+}
+.container8 {
+    background: #FFF4F0;
+    width: 52.938rem;
+    height: 64.75rem;
+    font-family: "Poppins", sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 6rem;
+    padding: 3.313rem 14.75rem;
+    border-radius: 0.938rem;
+    position: relative;
+    left: 3.563rem;
+    top: 1.563rem;
+}
+.h4m-0pr-3 {
+    color: #181818;
+    font-family: "Poppins",sans-serif;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 116%;
+    width: 40.813rem;
+    height: 2.375rem;
+    margin: 0.5rem;
+    position: relative;
+    right:2rem;
+}
+.fa-plus{
+    position: relative;
+    left: 39.75rem;
+    bottom: 3.438rem;
+    width:1.063rem;
+    height:1.063rem;
+  }
+  .consultation img {
+    width: 49rem;
+    height: 13.75rem;
+    position: relative;
+    top: 8.375rem;
+}
+.consultation .caption{
+    color: white;
+    font-family: "Lato",sans-serif;
+    font-size: 0.8rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 147.5%;
+    position: relative;
+    bottom: 2.5rem;
+    right: 7.1rem;
+}
+.consultation h2 {
+    color: white;
+    font-family: "Poppins",sans-serif;
+    font-size: 1.588rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 116%;
+    position: relative;
+    bottom: 2.5rem;
+    right: 7.813rem;
+}
+.consultation button {
+    width: 9.5rem;
+    height: 3.875rem;
+    background-color: #FBC336;
+    border-radius: 2.625rem;
+    border: none;
+    color: black;
+    font-family: "Lato",sans-serif;
+    font-size: 1.25rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 160%;
+    text-align: center;
+    position: relative;
+    left: 11.313rem;
+    bottom: 7.875rem;
+}
+
+
+}
