--- a/bookingform1.css
+++ b/bookingform1.css
@@ -4,11 +4,23 @@
     box-sizing:border-box;
 }
 .form{
-    display: flex;
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.6);
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-}
+  }
+  .close-btn {
+    cursor: pointer;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 20px;
+  }
 .form-background{
     width: 500px;
     height:730px;
